carousel card scrollbar causing body to shift right issue fixed

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -56,3 +56,7 @@
 .blur_element {
   backdrop-filter: blur(8px);
 }
+
+body {
+  font-family: -apple-system, system-ui, BlinkMacSystemFont;
+}
